# regex-finder

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: common_groups.py  generate_substrings.py  main.py
tests/: test_find_common_groups.py  test_generate_all_substrings.py  test_generate_substrings.py
